Fix xp bar being cut off at higher levels

--- a/code/Styles/_progression.scss
+++ b/code/Styles/_progression.scss
@@ -8,7 +8,6 @@
     padding: 8px;
     padding-left: 80px;
     padding-right: 80px;
-
     padding-bottom: 0;
     align-items: center;
     gap: 8px;
@@ -35,6 +34,9 @@
 
     .level
     {
+        width: 64px;
+        justify-content: center;
+        text-align: center;
         padding: 0px 8px 0px 8px;
         font-family: $main-font-semibold;
         color: rgba( white, 0.8 );
